<resources>
    <string name="app_name">RetrofitMVVMDemo02</string>
    <string name="total_results">Total Results :</string>
    <string name="articles">Articles :</string>
    <string name="source">Source :</string>
    <string name="id">ID :</string>
    <string name="author">Author :</string>
    <string name="name">Name :</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="content">Content :</string>
    <string name="published_at">Published At :</string>
</resources>